Added js function that resizes the canvas to fullscreen. Also added style.css file.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
 
-    <title>Hello World</title>
-
-    <style>
-      body {
-        border: 1px solid black;
-      }
-    </style>
-
+    <title>Retro Snake</title>
+    <link rel="stylesheet" href="styles.css">
     <!-- Inline scripts are forbidden in Firefox OS apps (CSP restrictions),
          so we use a script file. -->
     <script src="app.js" defer></script>
@@ -20,7 +14,7 @@
 
   <body>
     <!-- This code is in the public domain. Enjoy! -->
-    <h1>SNAKE GAME</h1>
+    <canvas id="full" style="border:1px solid #000000;"></canvas>
   </body>
 
 </html>
