--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
   <body>
     <!-- This code is in the public domain. Enjoy! -->
-    <canvas id="full" style="border:1px solid #000000;"></canvas>
+    <canvas id="mycanvas">
+    </canvas>
   </body>
 
 </html>
