Added moving box that can be moved with arrows.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
   </head>
 
-  <body>
+  <body onload="startGame()">
     <!-- This code is in the public domain. Enjoy! -->
-    <canvas id="mycanvas">
-    </canvas>
+    <!-- <canvas id="mycanvas">
+    </canvas> -->
   </body>
 
 </html>
